# noor-ai

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  render.yaml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
assets/db/: english_saheeh.db  english_transliteration.db
assets/vector_db/: manifest.json  zvec_db_sources.tsv
assets/vector_db/zvec_db/: del.0  manifest.131  manifest.3
backend/: .env.example  package.json
backend/src/: index.js
lib/: app.dart  main.dart
lib/core/models/: bookmark.dart  chapter_info.dart  chat_message.dart  daily_ayah.dart  intent.dart  juz_info.dart  quran_recitation_resource.dart  quran_tafsir_resource.dart  quran_translation_resource.dart  reading_goal.dart  reflection_post.dart  surah.dart  verse.dart
lib/core/router/: app_router.dart
lib/core/services/: daily_ayah_widget_service.dart  daily_notification_service.dart  database_service.dart  embedding_service.dart  llm_service.dart  local_quran_asset_service.dart  location_service.dart  model_manager.dart  native_bridge.dart  quran_api_config_service.dart  quran_api_service.dart  quran_rag_service.dart  quran_user_session_service.dart  quran_user_sync_service.dart  smart_reminders_service.dart  vector_store_service.dart  verse_share_service.dart  voice_service.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: asr_normalization_pipeline.dart  emotional_response_repair.dart  emotional_verse_selector.dart  intent_parser.dart  named_verse_registry.dart  perf_trace.dart  prompt_templates.dart  quran_query_helpers.dart
lib/features/shell/: shell_page.dart
lib/features/tools/: tools_hub_page.dart
native/cpp/: CMakeLists.txt
native/cpp/include/: edgemind_core.h  ffi_binary_protocol.h  ffi_memory_pool.h  mnn_wrapper.h  thread_safe_state.h
native/cpp/mnn/android-install/arm64-v8a/: include  lib
native/cpp/mnn/source/apps/frameworks/sherpa-mnn/cmake/: simple-sentencepiece.cmake
native/cpp/mnn/source/apps/frameworks/sherpa-mnn/sherpa-mnn/csrc/: offline-speech-denoiser-gtcrn-model.cc
native/cpp/src/: asr_recognizer.cpp  asr_recognizer.h  edgemind_core.cpp  mnn_wrapper.cpp  sherpa_mnn_asr.cpp  sherpa_mnn_asr.h  thread_safe_state.cpp  whisper_cpp_asr.cpp  whisper_cpp_asr.h  zvec_c.cpp  zvec_c.h  zvec_c_stub.cpp
native/cpp/src/piper/: piper.cpp  piper.h  simpleg2p.cpp  simpleg2p.h
native/cpp/src/supertonic/: supertonic_tts.cpp  supertonic_tts.h
native/cpp/zvec/zvec-android-arm64/include/ailego/algorithm/: kmeans.h
native/cpp/zvec/zvec-android-arm64/include/ailego/math/: distance.h  distance_matrix.h  euclidean_distance_matrix.h  hamming_distance_matrix.h  inner_product_matrix.h
native/cpp/zvec/zvec-android-arm64/include/ailego/utility/: memory_helper.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/cluster/: cluster_params.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/flat/: flat_streamer_entity.h  flat_utility.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/flat_sparse/: flat_sparse_context.h  flat_sparse_provider.h  flat_sparse_searcher.h  flat_sparse_utility.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/hnsw/: hnsw_builder.h  hnsw_builder_entity.h  hnsw_chunk.h  hnsw_index_hash.h  hnsw_streamer_entity.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/hnsw_sparse/: hnsw_sparse_builder_entity.h  hnsw_sparse_chunk.h  hnsw_sparse_index_provider.h  hnsw_sparse_streamer_entity.h
native/cpp/zvec/zvec-android-arm64/include/core/algorithm/ivf/: ivf_centroid_index.h  ivf_dumper.h  ivf_entity.h  ivf_searcher_context.h  ivf_utility.h
native/cpp/zvec/zvec-android-arm64/include/core/metric/: metric_params.h  quantized_integer_metric_batch.h
native/cpp/zvec/zvec-android-arm64/include/db/common/: cgroup_util.h  concurrent_roaring_bitmap.h  file_helper.h  logger.h  profiler.h  rocksdb_context.h  typedef.h  utils.h
native/cpp/zvec/zvec-android-arm64/include/db/index/column/inverted_column/: inverted_rocksdb_merger.h  inverted_search_result.h
native/cpp/zvec/zvec-android-arm64/include/db/index/column/vector_column/: engine_helper.hpp
native/cpp/zvec/zvec-android-arm64/include/db/index/common/: type_helper.h
native/cpp/zvec/zvec-android-arm64/include/db/index/storage/: bufferpool_forward_store.h  lazy_record_batch_reader.h
native/cpp/zvec/zvec-android-arm64/include/db/index/storage/wal/: wal_file.h
native/cpp/zvec/zvec-android-arm64/include/db/sqlengine/analyzer/: query_info.h
native/cpp/zvec/zvec-android-arm64/include/db/sqlengine/common/: generic_node.h
native/cpp/zvec/zvec-android-arm64/include/db/sqlengine/parser/: select_info.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/buffer/: buffer_manager.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/container/: heap.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/encoding/json/: mod_json.h  mod_json_plus.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/internal/: platform.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/io/: file.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/logger/: logger.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/ailego/pattern/: factory.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/core/framework/: index_builder.h  index_bundle.h  index_cluster.h  index_converter.h  index_document.h  index_dumper.h  index_holder.h  index_logger.h  index_provider.h  index_reducer.h  index_reformer.h  index_runner.h  index_searcher.h  index_segment_storage.h  index_storage.h  index_streamer.h  index_threads.h  index_trainer.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/core/interface/: constants.h  index_param_builders.h
native/cpp/zvec/zvec-android-arm64/include/include/zvec/db/: query_params.h
scripts/: generate_icons.py
test/: widget_test.dart
test/core/services/: model_manager_test.dart  quran_rag_service_test.dart  quran_user_session_service_test.dart  (+2 more)
tools/: build_vector_db.py  ingest_hadith.py  smoke_test_vector_db.py
(+211 files in other folders)
